fix alignment

--- a/client/src/components/SearchPage/SearchPage.css
+++ b/client/src/components/SearchPage/SearchPage.css
@@ -15,7 +15,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin-top: 15px;
 }
 
 
